--- a/src/anti-app.html
+++ b/src/anti-app.html
@@ -40,6 +40,19 @@
                 background-color: var(--app-primary-color);
             }
 
+            app-toolbar {
+                display: var(--layout-horizontal_-_display);
+                position: var(--layout-fixed-top_-_position);
+                top: var(--layout-fixed-top_-_top);
+                left: var(--layout-fixed-top_-_left);
+                right: var(--layout-fixed-top_-_right);
+                z-index: 1;
+                background-color: var(--app-primary-color);
+                --app-header-shadow_-_box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.2);
+                --app-header-shadow_-_height: 10px;
+                --app-header-shadow_-_bottom: -10px;
+            }
+
             app-header paper-icon-button {
                 --paper-icon-button-ink-color: white;
             }
@@ -59,6 +72,24 @@
             .drawer-list a.iron-selected {
                 color: black;
                 font-weight: bold;
+            }
+
+            .text-center {
+                text-align: center;
+            }
+
+            .navTabs {
+                @apply --layout;
+                @apply --layout-center-center;
+                position: relative;
+                margin-top: 66px;
+                height: 66px;
+                flex-direction: row;
+                justify-content: center;
+            }
+
+            .navTabs p {
+                padding: 0 32px;
             }
         </style>
 
@@ -89,9 +120,15 @@
 
                 <app-header slot="header" condenses reveals effects="waterfall">
                     <app-toolbar>
-                        <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-                        <div main-title>AntiOfficial</div>
+                        <!--TODO: Only show on small screens -->
+                        <!--<paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>-->
+                        <div class="text-center" main-title>AntiOfficial</div>
                     </app-toolbar>
+                    <div class="navTabs">
+                        <p>Test</p>
+                        <p>Test</p>
+                        <p>Test</p>
+                    </div>
                 </app-header>
 
                 <iron-pages
