--- a/src/anti-item-container.html
+++ b/src/anti-item-container.html
@@ -5,18 +5,28 @@
     <template>
         <style include="shared-styles">
             :host {
-                display: block;
+                height: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
             }
 
-            #one {
-
+            #featured-item {
+                height: 100%;
+                width: 40%;
+                background: rgba(33, 33, 33, 0.47);
             }
-            
-            #two {
 
+            #items {
+                height: 100%;
+                width: 60%;
             }
         </style>
 
+        <div id="featured-item">
+            <slot name="featured"></slot>
+        </div>
+        <slot id="items"></slot>
     </template>
 
     <script>
