--- a/src/anti-app.html
+++ b/src/anti-app.html
@@ -15,7 +15,7 @@
 <link rel="import" href="my-icons.html">
 <link rel="import" href="anti-categories.html">
 
-<link rel="lazy-import" href="anti-view1.html">
+<link rel="lazy-import" href="anti-mens.html">
 <link rel="lazy-import" href="my-view2.html">
 <link rel="lazy-import" href="my-view3.html">
 <link rel="lazy-import" href="my-view404.html">
@@ -118,12 +118,12 @@
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
                     <a name="home" href="[[rootPath]]home">View One</a>
-                    <a name="view1" href="[[rootPath]]view1">View One</a>
+                    <a name="view1" href="[[rootPath]]mens">Mens</a>
                     <a name="view2" href="[[rootPath]]view2">View Two</a>
                     <a name="view3" href="[[rootPath]]view3">View Three</a>
                 </iron-selector>
             </app-drawer>
-
+            <!-- Breakpoint at 1326px for anti-items-->
             <!-- Main content -->
             <app-header-layout has-scrolling-region>
 
@@ -150,7 +150,7 @@
                         fallback-selection="view404"
                         role="main">
                     <anti-home name="home"></anti-home>
-                    <my-view1 name="view1"></my-view1>
+                    <anti-mens name="mens" route="[[route]]"></anti-mens>
                     <my-view2 name="view2"></my-view2>
                     <my-view3 name="view3"></my-view3>
                     <my-view404 name="view404"></my-view404>
@@ -178,10 +178,6 @@
                     },
                     categories: {
                         type: Array,
-                        value: [
-                            {name: 'Bob', title: 'Smith'},
-                            {name: 'Sally', title: 'Johnson'}
-                        ]
                     },
                     routeData: Object,
                     subroute: Object,
