--- a/src/anti-mens.html
+++ b/src/anti-mens.html
@@ -9,10 +9,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/app-route/app-route.html">
+<link rel="import" href="anti-categories.html">
 <link rel="import" href="anti-items.html">
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view1">
+<dom-module id="anti-mens">
     <template>
         <!-- css.css -->
         <style include="shared-styles">
@@ -50,10 +52,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 background: #212121;
             }
         </style>
+
+        <app-route
+                route="[[route]]"
+                pattern="/:category"
+                data="{{routeData}}"></app-route>
+
+        <anti-categories
+                id="categoryData"
+                category-name="[[routeData.category]]"
+                category="{{category}}"
+                failure="{{failure}}"></anti-categories>
+
         <anti-items>
             <div slot="featured"></div>
             <div id="items">
-                <div><p>IDK</p></div>
+                <!--<div><p>IDK</p></div>
                 <div class="one"><p>IDK</p></div>
                 <div><p>IDK</p></div>
                 <div class="one"><p>IDK</p></div>
@@ -64,18 +78,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <div><p>IDK</p></div>
                 <div class="one"><p>IDK</p></div>
                 <div><p>IDK</p></div>
-                <div class="one"><p>IDK</p></div>
+                <div class="one"><p>IDK</p></div>-->
+                <p>Category: [[category.title]]</p>
+                <dom-repeat items="[[_getListItems(category.items)]]" initial-count="4">
+                    <template>
+                        <p>
+                            <a href$="[[_getItemHref(item)]]"><p>[[item.title]]</p></a>
+                        </p>
+                    </template>
+                </dom-repeat>
             </div>
         </anti-items>
     </template>
 
     <script>
-        class MyView1 extends Polymer.Element {
+        class AntiMens extends Polymer.Element {
             static get is() {
-                return 'my-view1';
+                return 'anti-mens';
+            }
+            static get properties(){
+                return {
+                    category: Object,
+                    route: Object,
+                    routeData: Object,
+                }
+            }
+            _getListItems(items) {
+                // Return placeholder items when the items haven't loaded yet.
+                return items || [{},{},{},{},{},{},{},{},{},{}];
+            }
+            _getItemHref(item) {
+                // By returning null when `itemId` is undefined, the href attribute won't be set and
+                // the link will be disabled.
+                return item.name ? ['/detail', this.category.name, item.name].join('/') : null;
             }
         }
 
-        window.customElements.define(MyView1.is, MyView1);
+        window.customElements.define(AntiMens.is, AntiMens);
     </script>
 </dom-module>
