--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="../bower_components/web-component-tester/browser.js"></script>
 
     <!-- Import the element to test -->
-    <link rel="import" href="../src/anti-view1.html">
+    <link rel="import" href="../src/anti-mens.html">
   </head>
   <body>
     <test-fixture id="BasicView">
