--- a/src/anti-home.html
+++ b/src/anti-home.html
@@ -16,7 +16,7 @@
                 pattern="/:category"
                 data="{{routeData}}"></app-route>
 
-        <a name="view1" href="[[rootPath]]view1">View 1</a>
+        <a name="view1" href="[[rootPath]]/list/mens">View 1</a>
     </template>
 
     <script>
