--- a/test/index.html
+++ b/test/index.html
@@ -21,9 +21,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
-        // Load 'anti-mens.html' test suite, using native shadow dom
+        // Load 'anti-list.html' test suite, using native shadow dom
         'my-view1.html?dom=shadow',
-        // Load 'anti-mens.html' test suite, using shadydom
+        // Load 'anti-list.html' test suite, using shadydom
         'my-view1.html?wc-shadydom=true',
       ]);
     </script>
