--- a/src/anti-home.html
+++ b/src/anti-home.html
@@ -8,7 +8,9 @@
                 height: 100%;
                 padding: 16px;
             }
-
+            p {
+                margin-left: 16px;
+            }
         </style>
 
         <app-route
@@ -16,7 +18,7 @@
                 pattern="/:category"
                 data="{{routeData}}"></app-route>
 
-        <a name="view1" href="[[rootPath]]/list/mens">View 1</a>
+        <p>Welcome to AntiOfficial</p>
     </template>
 
     <script>
