--- a/src/anti-list-item.html
+++ b/src/anti-list-item.html
@@ -28,6 +28,7 @@
             img {
                 height: 300px;
                 width: 100%;
+                max-width: 500px;
             }
 
             .container {
